<resources>
    <string name="app_name">Wnder</string>

    <!--Multiple usage-->
    <string name="no_connection">No internet connection !</string>
    <string name="no_internet_body">Your internet connection was lost, please try again later</string>
    <string name="guest_not_allowed">Feature not available as Guest user!</string>
    <string name="distance_meter">%1$d m</string>
    <string name="distance_kilometer">%1$d km</string>

    <!--Login Activity Strings-->
...
    <string name="RED_CIRCLE_LAYER_ID">red-circle-layer-id</string>

    <!--Guess Preview Strings-->
    <string name="content_descr_wnder_logo">This is the Wnder logo</string>
    <string name="content_descr_wnder_topBar">This is the top bar hosting the Wnder logo</string>
    <string name="content_descr_guess_preview_image">This is the image shown on the guess preview activity</string>
    <string name="report">Report</string>
    <string name="help">Help</string>
    <string name="popup_menu">Popup menu</string>
    <string name="report_confirm_title">You are about to report an image</string>
    <string name="report_confirm_message">Only images that are impossible to guess or inappropriate should be reported.\nPlease do not report images that you simply don\'t like</string>
    <string name="bar_save_is_impossible">"Impossible to save this picture."</string>
    <string name="bar_save_is_ok">"This picture has been saved."</string>
    <string name="help_title">"Actions possible:"</string>
    <string name="help_body">"Guess: Click on the lower button if you want to guess it's location. \n\nSkip: " +
                "Swipe left to skip the actual image and search an other one."</string>
    <string name="bar_report">"This picture has been reported."</string>

    <!--Guess Location Strings-->
...
    <string name="content_descr_activate_tour">Activates tour mode</string>
    <string name="tour_name">Tour name</string>
    <string name="guest_no_upload">Please log in before taking a picture.</string>
    <string name="upload_later">It seems you are not connected to the internet, your uploads will resume once you are connected again.</string>
    <string name="upload_started">Upload started.</string>
    <string name="upload_not_started">Upload failed to start.</string>
    <string name="upload_failed">Upload failed.</string>
    <string name="upload_successful">Your picture was successfully uploaded!</string>
    <string name="validate_tour">Validate tour</string>

    <!--Image From Gallery Strings-->
    <string name="SensorNotAvailableTitle">Sensor not available</string>
    <string name="SensorNotAvailable">The sensor to get information about the phone 3D position is not available. You can\'t access the compass mode.</string>
    <string name="save_to_gallery">Save to gallery</string>

    <!--Navigation Activity Strings-->
    <string name="profile_destination">Profile</string>
    <string name="guess_destination">Guess</string>
    <string name="history_destination">History</string>
    <string name="take_picture_destination">Upload</string>
...
