<?xml version ="1.0" encoding ="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/profile_page"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/profile_destination"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/take_picture_page"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_camera_alt_24"
        android:title="@string/take_picture_destination"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/guess_page"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_not_listed_location_24"
        android:title="@string/guess_destination"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/history_page"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_image_24"
        android:title="@string/history_destination"
        app:showAsAction="ifRoom" />
</menu>