<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".guessLocation.GuessPreviewActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:progressTint="@color/purple_200"/>

    <ImageView
        android:id="@+id/imagePreview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/content_descr_guess_preview_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <Button
        android:id="@+id/guessButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/begin_guess"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/help_bar_height"
        android:background="@color/purple_500"
        android:contentDescription="@string/content_descr_guess_preview_purple_band"
        app:layout_constraintEnd_toEndOf="@+id/helperButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/wonder_help_bar_margin"
        android:layout_centerVertical="true"
        android:contentDescription="@string/content_descr_guess_preview_written_logo"
        app:layout_constraintBottom_toBottomOf="@+id/imageView1"
        app:layout_constraintStart_toStartOf="@+id/imageView1"
        app:layout_constraintTop_toTopOf="@+id/imagePreview"
        app:srcCompat="@raw/wonder"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/helperButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/floating_point_margin"
        android:clickable="true"
        android:contentDescription="@string/popup_menu"
        android:focusable="true"
        android:onClick="showPopup"
        android:layout_centerVertical="true"
        app:backgroundTint="@color/purple_500"
        app:borderWidth="0dp"
        app:elevation="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imagePreview"
        app:srcCompat="@drawable/ic_baseline_more_horiz_24" />

</androidx.constraintlayout.widget.ConstraintLayout>